# gst-plugins-qtec-core

./: Makefile.am  configure.ac
gst/: Makefile.am
gst-libs/: Makefile.am
gst-libs/gst/: Makefile.am
gst-libs/gst/fpncmagic/: Makefile.am  gstfpncmagicmeta.c  gstfpncmagicmeta.h
gst-libs/gst/histogram/: Makefile.am  gsthistmeta.c  gsthistmeta.h
gst-libs/gst/v4l2/: Makefile.am  gstv4l2Events.c  gstv4l2Events.h  gstv4l2Queries.c  gstv4l2Queries.h  gstv4l2commonutils.c  gstv4l2commonutils.h  gstv4l2debug.c  gstv4l2debug.h  gstv4l2lib.h
gst/avgframes/: Makefile.am  gstavgframes.c  gstavgframes.h
gst/avgrow/: Makefile.am  gstavgrow.c  gstavgrow.h
gst/fpncmagic/: Makefile.am  gstfpncmagic.c  gstfpncmagic.h  quickselect.c  quickselect.h
gst/fpncsink/: Makefile.am  gstfpncsink.c  gstfpncsink.h
gst/histogram/: Makefile.am  gstdrawhist.c  gstdrawhist.h  gsthist.c  gstvideohistogram.c  gstvideohistogram.h
gst/v4l2-pid/: Makefile.am  gstv4l2pid.c  gstv4l2pid.h
gst/v4l2-sweep/: Makefile.am  gstv4l2sweep.c  gstv4l2sweep.h
gst/v4l2control/: Makefile.am  ext_control_headers.h  gstv4l2.c  gstv4l2control.c  gstv4l2control.h  gstv4l2utils.c  gstv4l2utils.h
tests/: Makefile.am  README
tests/check/: Makefile.am  template.c
tests/check/elements/: avgframes.c  avgrow.c  fpncmagic.c  fpncsink.c  histogram.c  v4l2control.c
tests/check/elements/v4l2utils/: v4l2utils.c  v4l2utils.h
tests/check/generic/: README
tests/check/pipelines/: README
tests/examples/: Makefile.am
tests/files/: Makefile.am
