plugin_LTLIBRARIES = libgstavgrow.la

libgstavgrow_la_SOURCES = gstavgrow.c

libgstavgrow_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
libgstavgrow_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstavgrow_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS) 

libgstavgrow_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

noinst_HEADERS = gstavgrow.h

-include $(top_srcdir)/git.mk
